--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "tailwindcss": "^3.4.17"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.1"
   }
 }
